CSS fix
Displays the torrent size on the progress bar even when the parent div
is too small (low progress percentage).  It use to only show up when
the percentage got high enough.

--- a/mobile.css
+++ b/mobile.css
@@ -41,6 +41,9 @@ html, body {
 	padding-top: 3px;
 	padding-left: 3px;
 }
+.progress .bar {
+	white-space: nowrap;
+}
 .table {
 	margin-bottom: 0;
 }
